--- a/tools/Makefile
+++ b/tools/Makefile
@@ -4,15 +4,19 @@ PIP = $(VENV)/bin/pip
 
 CSV = ../2025/runtimes.csv
 OUTPUT = plot.png
+README = ../README.md
 
 $(VENV)/bin/python:
 	python3 -m venv $(VENV)
 
 install: $(VENV)/bin/python
-	$(PIP) install pandas matplotlib
+	$(PIP) install pandas matplotlib tabulate
 
 plot:
 	$(PYTHON) runtime_plot.py $(CSV) $(OUTPUT)
+
+table:
+	$(PYTHON) runtime_table.py $(CSV)
 
 clean:
 	rm -rf $(VENV)
